add and style title block

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant landing page</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restaurant landing page</title>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Poppins:wght@100;200;400&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <script defer type="text/javascript" src="./src/script.js"></script>
 </head>
+
 <body>
-  
+    <h1>PUZZLES</h1>
+    <hr>
+    <header class="menu">
+        <h2 class="menu">Menu</h2>
+        <nav>
+            <ul id="menuItems">
+                <li>Food name</li>
+                <li>Another food name</li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
