--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <h2 id="name">Food name</h2>
             <p class="rating"><i class="fa-solid fa-star"></i><span id="rating">4.5</span></p>
             <img id="image" src="./assets/download.png" alt="image goes here">
+            <p id="price" class="price">Price</p>
             <p><em id="description">About item</em></p>
         </div>
 
