add and style order button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p class="rating"><i class="fa-solid fa-star"></i><span id="rating">4.5</span></p>
             <img id="image" src="./assets/download.png" alt="image goes here">
             <p class="price">Ksh. <span id="price">price</span></p>
+            <button class="orderBtn" id="orderBtn">Order</button>
             <p><em id="description">About item</em></p>
         </div>
 
